<resources>
    <string name="app_name">Oliver\'s Android Labs</string>
    <string name="hello_message">Hello World!</string>
    <string name="button_message">I\'m a button</string>
    <string name="type_your_password">Type your password:</string>
    <string name="login">Login</string>
    <string name="input_a_password">Input a password</string>
</resources>